<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_msg">Input your tweet</string>
    <string name="post_button">Post update</string>
    <string name="msg_hint">Enter your 140 chars tweet</string>
    
    <string name="userNameSummary">Please input your user name</string>
    <string name="userNameTitle">User Name</string>
    <string name="passwordSummary">Please input your password</string>
    <string name="passwordTitle">Password</string>
    

    <string name="action_showpost">Yamba Post</string>
    <string name="action_startservice">Start service</string>
    <string name="action_stopservice">Stop service</string>
    <string name="action_refreshservice">Refresh service</string>
</resources>
