<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.test.MainActivity" >

    <item
        android:id="@+id/action_showpost"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_showpost"/>
    
    <item
        android:id="@+id/actionServiceStart"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/action_startservice"/>
 
    <item
        android:id="@+id/actionServiceStop"
        android:orderInCategory="130"
        android:showAsAction="never"
        android:title="@string/action_stopservice"/>
        
    <item
        android:id="@+id/actionServiceRefresh"
        android:orderInCategory="140"
        android:showAsAction="never"
        android:title="@string/action_refreshservice"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
        
</menu>
