<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/TextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/input_msg"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:text="140" />
	</RelativeLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/msg_hint"
        android:inputType="textMultiLine"
        android:maxEms="15"
        android:maxLength="140"
        android:singleLine="false" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxEms="10"
        android:onClick="postTwitterUpdate"
        android:text="@string/post_button" />

</LinearLayout>